Added notification format hover. Code fixes.